locked apt, fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -144,16 +144,17 @@ body {
     text-align: center;
     overflow-y: scroll;
     overflow-x: hidden;
-    margin-bottom: 5%;
 }
 
 .selectHome {
     margin-top: 8%;
+    margin-bottom: 5%;
     max-height: 55vh;
 }
 
 .selectSub {
     margin-top: 5%;
+    margin-bottom: 2.5%;
     max-height: 20vh;
 }
 
@@ -238,5 +239,9 @@ body {
 
     #info {
         margin-bottom: 15%;
+    }
+
+    .selectSub { 
+        margin-bottom: 8%;
     }
 }
